fix the overlay shifting

--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,7 @@ body {
   box-shadow: 0px 0 15px 10px rgb(0 0 0 / 3%);
   margin-bottom: 20px;
   position: relative;
+  display: flex;
 }
 .main-image img {
   width: 100%;
